- Fix excluding a bridge
- Allow to call helpers from dynamic_parameters proc
- Fix warn when form is changed on create/update loaded on page (without AJAX)
- Fix XSS vulnerability when using to_label with as_ (#425)

= 3.4.20
- Update tinymce bridge for tinyMCE 4.x
- Ignore :format in conditions_from_params
- column with :radio form_ui works like :select form_ui in list and show
- Fix default opt_value in search_range when comparator options is overrided
- translate include_blank in select search_ui
- Add column.css_class to li tag on field search
- Allow to set having in custom_finder_options

= 3.4.19
- Fix rails bug on set_inverse_instance for has_one :through associations which has_many inverse association
- Fix warn when form is changed

= 3.4.18.1
- Fix do_destroy for mark action

= 3.4.18
- Fix paper_trail bridge on development
- Allow to set :data hash in :html_options for action links
- unscope(:order) in calculate_query (for rails >= 4)
- clean code and follow ruby style guide
- deny_access (rescue method for ActiveScaffold::RecordNotAllowed, ActiveScaffold::ActionNotAllowed) render with status :forbidden (403) instead of 401
- allow to load nested scaffold with nested through associations, even with inplace edit enabled
- disable create on nested through associations
- Allow to config live_search delay with ActiveScaffold.js_config
- Warn when form is changed (ignores search forms), this featured must be enabled with ActiveScaffold.js_config[:warn_changes], message can be set on <meta name="unload-message" content="..."> tag or ActiveScaffold.js_config[:unload_message]

= 3.4.17
- Fix deprecation warning "Extra .css in SCSS file is unnecessary"
- Improve support for namespaced models on namespaced controllers with different namespace

= 3.4.16
- add scoped_query to list methods, so it can be used for calculations, like each_record_in_scope is used to iterate over every filtered record
- fix field_search_ignore? and search_ignore?