@@ -2,6 +2,8 @@
 - Allow to call helpers from dynamic_parameters proc
 - Fix warn when form is changed on create/update loaded on page (without AJAX)
 - Fix XSS vulnerability when using to_label with as_ (#425)
+- Set cursor at end when focus first element
+- Set focus on form.search after search with refresh_with_header
 
 = 3.4.20
 - Update tinymce bridge for tinyMCE 4.x
